@@ -17,6 +17,7 @@ Version 0.2.1 - ??
 - [new] WFErrorsException class. A specialized exception that handles arrays of the structure used by validateObject().
 - [new] WFArray class, or the early beginnings of one. Right now it's just there to make it easy to simulate "prototype pluck" via:
         WFArray::arrayWithArray($arrayOfErrors)->valueForKeyPath('errorMessage')
+- [new] Add maxUploadBytes parameter to WFYAHOO_widget_Uploader.
 - [BC-break] Changed the default error code for WFError to NULL from 0. I don't think anyone is relying on this.
 
 Version 0.2.0 - 1/21/2009
